--- a/src/main-contant/searchbar.scss
+++ b/src/main-contant/searchbar.scss
@@ -1,5 +1,7 @@
 .search-container{
-    padding-top: 4rem ;
+    padding: 4rem 2rem ;
+    display: flex;
+    justify-content: space-around;
     .search-head{
         font-size:1.8rem;
         color: #303030;
@@ -7,6 +9,22 @@
         text-align: center;
         font-weight: 400;
     }
+
+    ::-webkit-scrollbar{
+        width: 5px;
+    }
+    ::-webkit-scrollbar-track{
+        border-radius: 10px;
+        background-color: #fff;
+    }
+    ::-webkit-scrollbar-thumb{
+        background-color: #d8232a;
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover{
+        background-color: #d8232a;
+    }
+
     .search-links{
         // text-align: center;
         justify-content: center;
@@ -36,8 +54,8 @@
         
     }
     .Search-bar{
-        width: 95%;
-        padding: .5rem;
+        width: 100%;
+        padding: .3rem .7rem;
         margin: auto;
         border:1px solid #909090;
         border-radius: 2rem;
@@ -113,7 +131,7 @@
                 background-color: #fff;
                 top: 52px;
                 left: 0;
-                width: 300%;
+                width: 350%;
                 border-radius: 0 0 4px 4px;
                 box-shadow: 0 2px 4px 0 rgba(0,0,0,.3);
                 .search-drapdown-head{
@@ -223,4 +241,26 @@ span{
 }
 .search-select{
     display: flex;
+}
+.slick-slider{
+    overflow: hidden;
+    border-radius: 1rem;
+}
+.slick-dots {
+    bottom: 10px !important;
+}
+.slick-dots .slick-active button{
+    border:3px solid #d8232a;
+    border-radius:50%;
+    color: #fff;
+    width: 0px;
+    height: 0px;
+    padding: 3px;
+}
+.slick-dots .slick-active button::before{
+    top: -4px;
+    left: 3px;
+    width: 0;
+    height: 0;
+    color: #fff !important;
 }
