--- a/src/Header/filterHead.scss
+++ b/src/Header/filterHead.scss
@@ -39,6 +39,125 @@
             padding: 0 .5rem ;
         }
     }
-   
+   .budget-fillter{
+    position: relative;
+    .drop-price{
+        position: absolute;
+        padding: .5rem;
+        z-index: 1;
+        background-color: #fff;
+        top: 38px;
+        width: 150%;
+        border-radius: 0 0 4px 4px;
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,.3);
+        left: -25%;
+        ::-webkit-scrollbar{
+            width: 5px;
+        }
+        ::-webkit-scrollbar-track{
+            border-radius: 10px;
+            background-color: #fff;
+        }
+        ::-webkit-scrollbar-thumb{
+            background-color: #d8232a;
+            border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover{
+            background-color: #d8232a;
+        }
+        .min-max-inputs{
+            display: flex;
+            align-items: center;
+        }
+        .min-max-container{
+            display: flex;
+            height: 15rem;
+            overflow: auto;
+            .min-price-container{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                font-size: 14px;
+                color: #606060;
+                line-height: 32px;
+                .min-price{
+                    width: 100%;
+                    padding: .3rem; 
+                    cursor: pointer;
+                    align-items: baseline !important;
+                    text-align: center;
+
+                }
+                .min-price:hover{
+                    background-color: #f5f5f5;
+                }
+            }
+       }
     
+        input{
+            
+            font-size: .8rem;
+            color: #606060;
+            border-radius: 2rem;
+            font-family: Montserrat;
+            border: 1px solid #d7d7d7;
+            background-color: #fff;
+            outline: none;
+            width: 90%;
+            padding:.3rem .5rem;
+            margin: .5rem;
+            text-align: center;
+            cursor: pointer;
+
+        }
+    }
+   }
+   .filter-falt{
+        position: relative;
+        .search-drapdown-falt{
+            position: absolute;
+            padding: .5rem;
+            background-color: #fff;
+            top: 38px;
+            left: -50%;
+            width: 200%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            .property{
+                padding: .2rem .6rem;
+                margin: .3rem;
+                border-radius: 3rem;
+                font-size: .9rem;
+                border:1px solid #d7d7d7;
+            }
+
+        }
+   }
+   .filter-bhk{
+    position: relative;
+        
+        .search-drapdown-falt{
+            padding: .5rem;
+            background-color: #fff;
+            position: absolute;
+            top: 38px;
+            left: -100%;
+            width: 300%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            align-items: center;
+            .property{
+                text-align: center;
+                width: 33.3%;
+                padding: .2rem .6rem;
+                margin: .3rem;
+                border-radius: 3rem;
+                font-size: .9rem;
+                border:1px solid #d7d7d7;
+                display: block;
+            }
+        }
+}    
 }
